2001-06-14  Arturo Espinosa Aldama  <arturo@ximian.com>

	* font.pl.in (regexp_cmp_foreach): helper.
	(xst_font_info_get_foundry_from_notice): Deduct foundry from copyright.
	(xst_font_info_get_setwidth_from_label): Deduct setwidth from font name.
	(xst_font_info_deduct_extras): From the information obtained, try to
	find implicit info.
	(xst_font_info_get_from_afm_buff): Parse an afm buffer, return font_info.
	(xst_font_info_get_from_afm_str): Split string in \n, parse buffer.
	(xst_font_info_get_from_afm): Read file into buffer, parse.
	(xst_font_info_get_from_ttf2pt1): Run ttf2pt1 -A, pipe into buffer, parse.
	(namerec_value): Helper for ttf routines.
	(xst_font_info_get_from_ttf): Use Font::TTF to get font_info from ttf.
	(xst_font_info_to_fontdir): Return fontdir line from font_info.

2001-06-13  Tambet Ingo  <tambet@ximian.com>

	* Makefile.am (backends): s/xconf/display/

	* x.pl.in: Many improvemets, parser works.

	* display-conf.in: Renamed from misnamed xconf-conf.in
	Mucho improvements.

2001-06-12  Richard Bos  <allabos@freeler.nl>

	* platform.pl.in (check_solaris): Add Solaris check.
	(xst_platform_guess): Allow for Solaris.

	* hardware-conf.in: Add required requires. Make it work.

2001-06-06  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (xml_print_import_smb): Don't print tags for user and
	  password if they are empty/unknown.

2001-06-06  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (xml_print_import_smb): Print <user> and <password> tags.
	  Fixes bug #3222.

2001-06-06  Arturo Espinosa Aldama  <arturo@ximian.com>

	* package-conf.in: contributed by Richard Bos <allabos@freeler.nl>
	* Makefile.am: added pertinent entries for package backend.

2001-06-05  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in (change_user_chfn): Little fix.

2001-06-04  Hans Petter Jansson  <hpj@ximian.com>

	* disks-conf.in (get_fdisk): Know more about extended partitions.

2001-06-04  Hans Petter Jansson  <hpj@ximian.com>
